--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@supabase/supabase-js": "^2.45.4",
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-query-devtools": "^5.56.2",
+    "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "embla-carousel-react": "^8.3.0",
     "lucide-react": "^0.441.0",
     "react": "^18.3.1",
@@ -37,6 +39,7 @@
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0",
     "vaul": "^0.9.3",
     "zod": "^3.23.8"
   },
