--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "embla-carousel-react": "^8.3.0",
