--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
     "vaul": "^0.9.3",
+    "vite-plugin-pwa": "^0.20.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
